Added typing to functions and used black Linter
